[workspace]
members = ["reakula"]
default-members = ["reakula"]
resolver = "2"

[workspace.package]
name = "reakula"
description = "A very simple light for ethereum in rust"
version = "0.1.0"
authors = ["Bartick <contact@bartick.me>", "Tamaghna <tamaghna.official@gmail.com>"]
edition = "2021"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
eyre = { version = "0.6.12" }

[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
