[workspace]
members = [ "alloy-helper","reakula", "safe_arith", "specs"]
default-members = ["reakula"]
resolver = "2"

[workspace.package]
name = "reakula"
description = "A very simple light for ethereum in rust"
version = "0.1.0"
authors = ["Bartick <contact@bartick.me>", "Tamaghna <tamaghna.official@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
eyre = { version = "0.6.12" }
sszb = { package = "sszb", git = "https://github.com/ghiliweld/sszb.git" }
sszb_derive = { package = "sszb_derive", git = "https://github.com/ghiliweld/sszb.git" }
safe_arith = { path = "safe_arith" }
alloy-primitives = { version = "0.8.15" }
serde = { version = "1.0.216", features = ["derive"] }
bytes = { version = "1.9.0", features = ["serde"] }
alloy_helper = { path = "alloy-helper" }

[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
