[workspace]
members = [ "alloy-helper", "helper", "reakula", "safe-arith", "specs"]
default-members = ["reakula"]
resolver = "2"

[workspace.package]
name = "reakula"
description = "A very simple light for ethereum in rust"
version = "0.1.0"
authors = ["Bartick <contact@bartick.me>", "Tamaghna <tamaghna.official@gmail.com>"]
edition = "2021"
rust-version = "1.81"

[workspace.dependencies]
tokio = { version = "1.41.1", features = ["full"] }
eyre = { version = "0.6.12" }
byteorder = { version = "1.5.0" }
serde = { version = "1.0.216", features = ["derive"] }
bytes = { version = "1.9.0", features = ["serde"] }
typenum = { version = "=1.17.0" }

sszb = { package = "sszb", git = "https://github.com/ghiliweld/sszb.git" }
sszb_derive = { package = "sszb_derive", git = "https://github.com/ghiliweld/sszb.git" }

specs = { path = "specs" }
safe_arith = { path = "safe-arith" }
alloy_helper = { path = "alloy-helper" }


[profile.dev]
opt-level = 3
lto = true

[profile.release]
opt-level = 3
strip = "debuginfo"
lto = true
