[package]
name = "specs"
description.workspace = true
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
sszb.workspace = true
sszb_derive.workspace = true
bytes = { workspace = true, features = ["serde"] }
safe_arith.workspace = true
alloy_helper.workspace = true
byteorder.workspace = true
typenum.workspace = true